--- a/custom.org
+++ b/custom.org
@@ -384,6 +384,28 @@ function.
      (global-set-key (kbd "C-x 3") 'split-window-right-and-balance-and-go-there-and-switch-buffer)
    #+END_SRC
 
+** Networking
+
+   #+BEGIN_SRC emacs-lisp
+     (require 'net-utils)
+     (require 'tramp)
+
+     (defun k20e/known-hosts ()
+       "Get a host name from ~./ssh/known_hosts file."
+       (completing-read "host: "
+                        (let ((value))
+                          (dolist (elt (tramp-parse-shosts "~/.ssh/known_hosts") value)
+                            (if elt (setq value (cons (cadr elt) value)))))))
+
+     (defun k20e/host-ip ()
+       "Insert the current IP of a host using `dns-lookup-program'.
+     Similar to but simpler than `dns-lookup-host'."
+       (interactive)
+       (let ((host (k20e/known-hosts)))
+         (insert (car (last (split-string (shell-command-to-string
+                                           (concat dns-lookup-program " " host))))))))
+   #+END_SRC
+
 ** STARTED Migrate [[https://github.com/krismolendyke/.emacs.d/blob/master/elisp/defuns.el][=defuns.el=]] here
 
 * OS X
