--- a/custom.org
+++ b/custom.org
@@ -348,6 +348,20 @@ function.
            (linum-mode linum-mode-previous-state))))
    #+END_SRC
 
+   This one is stolen from [[https://github.com/magnars/.emacs.d/blob/e56e71ce0f0791c7237192a049f29c2de686409a/defuns/lisp-defuns.el][magnars]]:
+
+   #+BEGIN_SRC emacs-lisp
+     (defun k20e/eval-and-replace ()
+       "Replace the preceding sexp with its value."
+       (interactive)
+       (backward-kill-sexp)
+       (condition-case nil
+           (prin1 (eval (read (current-kill 0)))
+                  (current-buffer))
+         (error (message "Invalid expression")
+                (insert (current-kill 0)))))
+   #+END_SRC
+
    Bind editing functions:
 
    #+BEGIN_SRC emacs-lisp
