--- a/custom.org
+++ b/custom.org
@@ -420,6 +420,37 @@ function.
                                            (concat dns-lookup-program " " host))))))))
    #+END_SRC
 
+** Lunar 🌙
+
+   #+BEGIN_SRC emacs-lisp
+     (require 'calendar)
+     (require 'lunar)
+
+     (defun k20e/full-moons-info ()
+       "Get a list of upcoming full moons info beginning with the current month.
+     See `lunar-phase-list' and `lunar-phase-name'."
+       (let* ((current-date (calendar-current-date))
+              (current-month (car current-date))
+              (current-year (car (last current-date)))
+              (full-moon-phase-index 2)
+              (k20e/full-moons-info '()))
+         (dolist (phase (lunar-phase-list current-month current-year))
+           (if (= (car (last phase)) full-moon-phase-index)
+               (setq k20e/full-moons-info (cons phase k20e/full-moons-info))))
+         (reverse k20e/full-moons-info)))
+
+     (defun k20e/full-moons ()
+       "Display upcoming full moons beginning with the current month."
+       (interactive)
+       (with-output-to-temp-buffer "*full-moons*"
+         (princ
+          (mapconcat
+           #'(lambda (x)
+               (format "%s %s" (calendar-date-string (car x)) (car (cdr x))))
+           (k20e/full-moons-info)
+           "\n"))))
+   #+END_SRC
+
 ** STARTED Migrate [[https://github.com/krismolendyke/.emacs.d/blob/master/elisp/defuns.el][=defuns.el=]] here
 
 * OS X
