--- a/custom.org
+++ b/custom.org
@@ -1655,11 +1655,7 @@ function.
       (define-key python-mode-map (kbd "C-M-f") 'python-nav-forward-sexp)
       (define-key python-mode-map (kbd "C-M-b") 'python-nav-backward-sexp)
       (define-key python-mode-map (kbd "C-M-n") 'python-nav-forward-block)
-      (define-key python-mode-map (kbd "C-M-p") 'python-nav-backward-block)
-
-      (define-key python-mode-map (kbd "C-M-.") 'mc/mark-next-like-this)
-      (define-key python-mode-map (kbd "C-M-,") 'mc/mark-previous-like-this)
-      (define-key python-mode-map (kbd "C-M-<return>") 'mc/mark-all-symbols-like-this))
+      (define-key python-mode-map (kbd "C-M-p") 'python-nav-backward-block))
 
     (add-hook 'python-mode-hook 'k20e/python-mode-hook)
   #+END_SRC
