--- a/custom.org
+++ b/custom.org
@@ -177,9 +177,9 @@ function.
 ** Set
 
    #+BEGIN_SRC emacs-lisp
+     (global-set-key (kbd "C-S-h") 'kill-whole-line)
      (global-set-key (kbd "C-c DEL") 'join-line)
      (global-set-key (kbd "C-h") 'delete-backward-char)
-     (global-set-key (kbd "C-S-h") 'kill-whole-line)
      (global-set-key (kbd "C-j") 'join-line)
      (global-set-key (kbd "C-x C-t") 'toggle-frame-fullscreen)
      (global-set-key (kbd "H-h H-f") 'find-function)
@@ -188,6 +188,7 @@ function.
      (global-set-key (kbd "M-.") 'imenu)
      (global-set-key (kbd "M-`") 'other-window)
      (global-set-key (kbd "M-h") 'backward-kill-word)
+     (global-set-key (kbd "M-t") 'transpose-lines)
    #+END_SRC
 
 * k20e Defaults
