python - Enable Flycheck.

--- a/custom.org
+++ b/custom.org
@@ -1705,7 +1705,7 @@ function.
       ;; Do not drive me crazy with extra-dumb indentation!
       (setq electric-indent-inhibit t)
       (linum-mode 1)
-      ;; (flycheck-mode 1)
+      (flycheck-mode 1)
       (setq fill-column 118
             autopair-handle-action-fns (list 'autopair-default-handle-action
                                              'autopair-python-triple-quote-action))
