--- a/custom.org
+++ b/custom.org
@@ -1458,7 +1458,7 @@ function.
       (auto-fill-mode 1)
       (org-toggle-pretty-entities) ;; Display entities as UTF-8 characters.
       (visual-line-mode 0)
-      (setq truncate-lines 0))
+      (setq truncate-lines nil))
 
     (add-hook 'org-mode-hook 'k20e/org-mode-hook)
 
