--- a/custom.org
+++ b/custom.org
@@ -566,8 +566,9 @@ function.
        (interactive)
        (disable-theme (car custom-enabled-themes))
        (load-theme k20e/theme-dark t)
-       (set-face-background 'cursor "green1")
        (set-face-background 'hl-line "gray20")
+       (set-face-background 'fringe "gray20")
+       (set-face-background 'linum "gray20")
        (set-face-background 'region "gray36")
        (set-face-background 'show-paren-match "gray64"))
 
