--- a/custom.org
+++ b/custom.org
@@ -2109,10 +2109,12 @@ function.
 * yaml-mode
 
   #+BEGIN_SRC emacs-lisp
+    (require 'ansible-doc)
     (require 'yaml-mode)
 
     (defun k20e/yaml-mode-hook ()
-        (define-key yaml-mode-map (kbd "C-m") 'newline-and-indent))
+      (ansible-doc-mode)
+      (define-key yaml-mode-map (kbd "C-m") 'newline-and-indent))
 
     (add-hook 'yaml-mode-hook 'k20e/yaml-mode-hook)
 
