--- a/custom.org
+++ b/custom.org
@@ -185,13 +185,14 @@ function.
      (global-set-key (kbd "C-h") 'delete-backward-char)
      (global-set-key (kbd "C-j") 'join-line)
      (global-set-key (kbd "C-x C-t") 'toggle-frame-fullscreen)
+     (global-set-key (kbd "C-x C-t") 'transpose-lines)
      (global-set-key (kbd "H-h H-f") 'find-function)
      (global-set-key (kbd "H-h H-v") 'find-variable)
      (global-set-key (kbd "M-+") 'text-scale-adjust)
      (global-set-key (kbd "M-.") 'imenu)
      (global-set-key (kbd "M-`") 'other-window)
      (global-set-key (kbd "M-h") 'backward-kill-word)
-     (global-set-key (kbd "M-t") 'transpose-lines)
+     (global-set-key (kbd "M-t") 'transpose-words)
    #+END_SRC
 
 * k20e Defaults
